--- a/etc/opennds/htdocs/splash.css
+++ b/etc/opennds/htdocs/splash.css
@@ -135,7 +135,7 @@ img,
     z-index: 5;
     width: 100px;
     height: 100px;
-    margin: 10px;
+    margin: 0 15px 10px 0;
     border-radius: 50%;
     object-fit: cover;
     border: 4px solid #fff;
@@ -154,7 +154,7 @@ img:hover { transform: scale(1.05) rotate(5deg); }
 /* --- العناوين --- */
 h1,
 .insert>h1 {
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     margin: 10px 0 15px;
     font-weight: 800;
     background: linear-gradient(to right, #ffffff 20%, #fff9c4 50%, #ffffff 80%);
@@ -181,7 +181,7 @@ input[type='number'] {
     border: none !important;
     border-radius: 12px;
     background: #fff !important;
-    font-size: 1.4rem;
+    font-size: 1.25rem;
     font-weight: 700;
     text-align: center;
     color: #d31027 !important;
@@ -213,7 +213,7 @@ input[type='submit'] {
     padding: 0;
     height: 60px !important;
     line-height: normal !important;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     border-radius: 12px;
     cursor: pointer;
     width: 100%;
@@ -269,7 +269,7 @@ hr {
 }
 
 med-blue {
-    font-size: 1.2em;
+    font-size: 1.1em;
     color: #dff9fb !important;
     font-weight: bold;
     display: block;
@@ -278,7 +278,7 @@ med-blue {
 }
 
 copy-right {
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     color: rgba(255, 255, 255, 0.7);
     font-weight: 600;
     display: block;
